style.css
body {
    box-sizing: border-box;
    font-family: sans-serif,'Times New Roman';
    margin: 0;
}

.header{
    background-color: #1F2937;
    display: flex;
    justify-content: space-between;
    padding-left: 300px;
    padding-right: 300px;
}

.logo {
    font-size: 34px;
    color: white;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding-left: 0px;
    padding-top: 5px;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 20px;
    align-items: center;
}

a {
    text-decoration: none;
    color: white;
}

.container-1 {
    background-color: #1F2937;
    margin: 0px;
    padding-top: 100px;
    padding-bottom: 100px;
    display: flex;
    flex: 1;
    justify-content: space-between;
    padding-left: 300px;
    padding-right: 300px;
}

.title {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: bolder;
}

.card {
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    align-items: center;
}

.card > img {
    width: 400px;
    height: auto;
    display: flex;
    justify-content: center;
    border-radius: 5px;
}

.card > p {
    color: #E5E7EB;
}

.card > button {
    background-color: #3882F6;
    color: white;
    border: none;
  color: white;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  border-radius: 10px;
}

.container-2 {
    justify-content: center;
    gap: 10px; 
    height: auto;
    display: flex;
    padding: 10px 400px;
    align-items: center;
}

.services {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 36px;
    color: #1F2937;
    font-weight: bold;
    padding: 50px 0px;
    width: 100%;

}

.mini-card > img {
    max-width: 190px;
    border-radius: 5px;
    border: 3px;
    border-color: #3882F6;
    border-style: solid;
}

.mini-card {
    width: 200px;
    height: auto;
    justify-content: space-evenly;
    flex: 1 1 0%;
}
.mini-card-text {
    text-align: center;
    max-height: 0px;
    max-width: 190px;
    justify-content: space-evenly;
    padding-bottom: 90px;
}

.container-3 {
    background-color: #E5E7EB;
    padding: 100px 0px;
}

.quote {
    display: flex;
    flex-direction: row;
    text-align:justify;
    font-style: italic;
    font-size: 36px;
    color: #1F2937;
    justify-content: center;
    align-items: center;
    padding-top: 30px;
}

.quote > p {
    width: 500px;
    font-weight: lighter;
}

.author {
    display: flex;
    flex: 1 0.5 0;
    justify-content: center;
    max-height: 20px;
    align-items: center;
    font-size: larger;
    font-weight: bold;
    color: #1F2937;
}

.author > p {
    text-align: right;
    width: 50%;

}

.container-4 {
    display: flex;
    justify-content: center;
    padding: 50px 0px;
}

.newsletter-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 40px 100px;
    background-color: #3882F6;
    width: 50%;
    border-radius: 10px;
}

.newsletter-text {
    color:#F9FAF8;
    font-weight: bold;
    font-size: larger;
}

.newsletter-text > p {
    font-weight: lighter;
    font-size: medium;
}

.newsletter-button > button {
  padding: 10px 40px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  border-radius: 10px;
  border-color: white;
  border-style: solid;
  background-color: transparent;
  color:white;
}

